PROJECT(S2)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0 FATAL_ERROR)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -pipe -fPIC -Wall -m64 -pthread") # -Wl,-rpath,'$ORIGIN' -DUSE_SGIT40
#SET(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-rdynamic")
#SET(CMAKE_MODULE_LINKER_FLAGS "-rdynamic")
#SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "-rdynamic")
#SET(CMAKE_STAIIC_LIBRARY_LINK_CXX_FLAGS "-Wl,--out-implib,--export-all-symbols")
#SET(CMAKE_STAIIC_LIBRARY_LINK_C_FLAGS "-Wl,--out-implib,--export-all-symbols")
#SET(CMAKE_CXX_COMPILER /usr/bin/g++)

INCLUDE_DIRECTORIES(third)

ADD_SUBDIRECTORY(System)
ADD_SUBDIRECTORY(Shells)
